<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.avinashkumaryadav.avinash.Interestmenu">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Quotes:"
                android:id="@+id/quote"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:textSize="28dp"/>
            <TextView
                android:layout_below="@id/quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quotetext"
                android:paddingBottom="4dp"
                android:textSize="24sp"
                android:fontFamily="cursive"
                android:text="@string/quotetext"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hobbies:"
                android:id="@+id/hobby"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:textSize="28dp"
                android:layout_below="@id/quotetext"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hobby"
                android:text="@string/hobbies"
                android:paddingBottom="4dp"
                android:fontFamily="cursive"
                android:textSize="24sp"
                android:id="@+id/hobbies"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Food:"
                android:id="@+id/food"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:textSize="28dp"
                android:layout_below="@id/hobbies"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:layout_below="@id/food"
                android:paddingBottom="4dp"
                android:fontFamily="cursive"
                android:textSize="24sp"
                android:id="@+id/foodtext"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dreams:"
                android:id="@+id/dream"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:textSize="28dp"
                android:layout_below="@id/foodtext"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dream"
                android:layout_below="@id/dream"
                android:paddingBottom="4dp"
                android:fontFamily="cursive"
                android:textSize="24sp"
                android:id="@+id/dreamtext"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Best Friends:"
                android:id="@+id/friend"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                android:textSize="28dp"
                android:layout_below="@id/dreamtext"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friendname"
                android:layout_below="@id/friend"
                android:paddingBottom="16dp"
                android:fontFamily="cursive"
                android:textSize="24sp"
                />
        </RelativeLayout>
    </ScrollView>


</FrameLayout>
